--- a/categorical+numerical/main.ipynb
+++ b/categorical+numerical/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "4           Achtertuin en voortuin                                  1745  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        " 'estimated_neighbourhood_price_per_m2': 219}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
        " 'estimated_neighbourhood_price_per_m2': 74}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
        " max                        NaN                          11495.000000  )"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +981,7 @@
        "[5 rows x 1516 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1091,14 +1091,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/9x/21kgbkbn0gx6fdwpv8lnjmnh0000gn/T/ipykernel_15992/946135671.py:28: SettingWithCopyWarning: \n",
+      "/var/folders/9x/21kgbkbn0gx6fdwpv8lnjmnh0000gn/T/ipykernel_17708/946135671.py:28: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1220,7 @@
        "Gradient Boosting                     0.635188                  0.626987"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,17 +1259,17 @@
     "results_fe = train_and_evaluate(models, X_poly_train_reduced_scaled, X_poly_test_reduced_scaled, y_poly_train, y_poly_test)\n",
     "\n",
     "# Create a DataFrame to compare results\n",
-    "results_df = pd.DataFrame({\n",
+    "results_df2 = pd.DataFrame({\n",
     "    'Without Feature Engineering': results_no_fe,\n",
     "    'With Feature Engineering': results_fe\n",
     "})\n",
     "\n",
-    "results_df"
+    "results_df2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1330,7 @@
        "Gradient Boosting                 89319.234039              89569.128185"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1380,7 +1380,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Without Feature Engineering</th>\n",
+       "      <th>With Feature Engineering</th>\n",
+       "      <th>Without Feature Engineering</th>\n",
+       "      <th>With Feature Engineering</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>KNN</th>\n",
+       "      <td>103958.556823</td>\n",
+       "      <td>107521.796644</td>\n",
+       "      <td>0.485890</td>\n",
+       "      <td>0.468537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Random Forest</th>\n",
+       "      <td>91477.745045</td>\n",
+       "      <td>93299.456477</td>\n",
+       "      <td>0.605781</td>\n",
+       "      <td>0.602324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ada Boosting</th>\n",
+       "      <td>120199.014087</td>\n",
+       "      <td>130555.582679</td>\n",
+       "      <td>0.440846</td>\n",
+       "      <td>0.394160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gradient Boosting</th>\n",
+       "      <td>89319.234039</td>\n",
+       "      <td>89569.128185</td>\n",
+       "      <td>0.635188</td>\n",
+       "      <td>0.626987</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Without Feature Engineering  With Feature Engineering  \\\n",
+       "KNN                              103958.556823             107521.796644   \n",
+       "Random Forest                     91477.745045              93299.456477   \n",
+       "Ada Boosting                     120199.014087             130555.582679   \n",
+       "Gradient Boosting                 89319.234039              89569.128185   \n",
+       "\n",
+       "                   Without Feature Engineering  With Feature Engineering  \n",
+       "KNN                                   0.485890                  0.468537  \n",
+       "Random Forest                         0.605781                  0.602324  \n",
+       "Ada Boosting                          0.440846                  0.394160  \n",
+       "Gradient Boosting                     0.635188                  0.626987  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Concat both dataframes\n",
+    "\n",
+    "results_df = pd.concat([results_df, results_df2], axis=1)\n",
+    "\n",
+    "results_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
