--- a/categorical+numerical/pca_alternative.ipynb
+++ b/categorical+numerical/pca_alternative.ipynb
@@ -189,22 +189,183 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>MSE</th>\n",
+       "      <th>R2</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>Best Parameters</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GradientBoosting</td>\n",
+       "      <td>4.082659e+10</td>\n",
+       "      <td>0.646623</td>\n",
+       "      <td>115976.443411</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>RandomForest</td>\n",
+       "      <td>4.831633e+10</td>\n",
+       "      <td>0.581795</td>\n",
+       "      <td>120205.811967</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>XGBoost</td>\n",
+       "      <td>3.446628e+10</td>\n",
+       "      <td>0.701675</td>\n",
+       "      <td>112525.067799</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>XGBoost (Grid Search)</td>\n",
+       "      <td>4.116237e+10</td>\n",
+       "      <td>0.643717</td>\n",
+       "      <td>112348.109583</td>\n",
+       "      <td>{'learning_rate': 0.1, 'max_depth': 3, 'n_esti...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Model           MSE        R2            MAE  \\\n",
+       "0       GradientBoosting  4.082659e+10  0.646623  115976.443411   \n",
+       "1           RandomForest  4.831633e+10  0.581795  120205.811967   \n",
+       "2                XGBoost  3.446628e+10  0.701675  112525.067799   \n",
+       "3  XGBoost (Grid Search)  4.116237e+10  0.643717  112348.109583   \n",
+       "\n",
+       "                                     Best Parameters  \n",
+       "0                                               None  \n",
+       "1                                               None  \n",
+       "2                                               None  \n",
+       "3  {'learning_rate': 0.1, 'max_depth': 3, 'n_esti...  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### Feature selection and z-score normalization\n",
+    "import pandas as pd\n",
     "\n",
-    "- Selecting the features that are most correlated with the target variable."
+    "# Results data\n",
+    "results = [\n",
+    "    {'Model': 'GradientBoosting', 'MSE': 40826593558.49962, 'R2': 0.6466229452631963, 'MAE': 115976.443411, 'Best Parameters': None},\n",
+    "    {'Model': 'RandomForest', 'MSE': 48316334735.84451, 'R2': 0.5817950366060929, 'MAE': 120205.811967, 'Best Parameters': None},\n",
+    "    {'Model': 'XGBoost', 'MSE': 34466279683.907974, 'R2': 0.7016749978065491, 'MAE': 112525.067799, 'Best Parameters': None},\n",
+    "    {'Model': 'XGBoost (Grid Search)', 'MSE': 41162374909.99318, 'R2': 0.64371657371521, 'MAE': 112348.109583, 'Best Parameters': {'learning_rate': 0.1, 'max_depth': 3, 'n_estimators': 200}}\n",
+    "]\n",
+    "\n",
+    "# Convert to DataFrame\n",
+    "results_df = pd.DataFrame(results)\n",
+    "\n",
+    "results_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 12 candidates, totalling 36 fits\n",
+      "[CV] END ...learning_rate=0.1, max_depth=3, n_estimators=100; total time=   5.7s\n",
+      "[CV] END ...learning_rate=0.1, max_depth=3, n_estimators=100; total time=   5.8s\n",
+      "[CV] END ...learning_rate=0.1, max_depth=3, n_estimators=100; total time=   5.9s\n",
+      "[CV] END ...learning_rate=0.1, max_depth=4, n_estimators=100; total time=   9.7s\n",
+      "[CV] END ...learning_rate=0.1, max_depth=3, n_estimators=200; total time=  10.1s\n",
+      "[CV] END ...learning_rate=0.1, max_depth=3, n_estimators=200; total time=  10.3s\n",
+      "[CV] END ...learning_rate=0.1, max_depth=4, n_estimators=100; total time=  10.5s\n",
+      "[CV] END ...learning_rate=0.1, max_depth=3, n_estimators=200; total time=  10.5s\n",
+      "[CV] END ...learning_rate=0.1, max_depth=4, n_estimators=100; total time=   9.4s\n",
+      "[CV] END ...learning_rate=0.1, max_depth=4, n_estimators=200; total time=  17.9s\n",
+      "[CV] END ...learning_rate=0.1, max_depth=4, n_estimators=200; total time=  17.9s\n",
+      "[CV] END ...learning_rate=0.1, max_depth=5, n_estimators=100; total time=  16.5s\n",
+      "[CV] END ...learning_rate=0.1, max_depth=5, n_estimators=100; total time=  16.3s\n",
+      "[CV] END ...learning_rate=0.1, max_depth=5, n_estimators=100; total time=  16.5s\n",
+      "[CV] END ...learning_rate=0.1, max_depth=4, n_estimators=200; total time=  17.4s\n",
+      "[CV] END ..learning_rate=0.05, max_depth=3, n_estimators=100; total time=   5.0s\n",
+      "[CV] END ..learning_rate=0.05, max_depth=3, n_estimators=100; total time=   5.1s\n",
+      "[CV] END ..learning_rate=0.05, max_depth=3, n_estimators=100; total time=   5.3s\n",
+      "[CV] END ..learning_rate=0.05, max_depth=3, n_estimators=200; total time=   9.5s\n",
+      "[CV] END ..learning_rate=0.05, max_depth=3, n_estimators=200; total time=   9.8s\n",
+      "[CV] END ..learning_rate=0.05, max_depth=3, n_estimators=200; total time=   9.6s\n",
+      "[CV] END ..learning_rate=0.05, max_depth=4, n_estimators=100; total time=   9.1s\n",
+      "[CV] END ..learning_rate=0.05, max_depth=4, n_estimators=100; total time=   9.2s\n",
+      "[CV] END ...learning_rate=0.1, max_depth=5, n_estimators=200; total time=  33.2s\n",
+      "[CV] END ..learning_rate=0.05, max_depth=4, n_estimators=100; total time=   8.9s\n",
+      "[CV] END ...learning_rate=0.1, max_depth=5, n_estimators=200; total time=  33.8s\n",
+      "[CV] END ..learning_rate=0.05, max_depth=4, n_estimators=200; total time=  17.9s\n",
+      "[CV] END ..learning_rate=0.05, max_depth=4, n_estimators=200; total time=  18.0s\n",
+      "[CV] END ..learning_rate=0.05, max_depth=5, n_estimators=100; total time=  16.4s\n",
+      "[CV] END ...learning_rate=0.1, max_depth=5, n_estimators=200; total time=  34.4s\n",
+      "[CV] END ..learning_rate=0.05, max_depth=4, n_estimators=200; total time=  17.7s\n",
+      "[CV] END ..learning_rate=0.05, max_depth=5, n_estimators=100; total time=  16.0s\n",
+      "[CV] END ..learning_rate=0.05, max_depth=5, n_estimators=100; total time=  15.8s\n",
+      "[CV] END ..learning_rate=0.05, max_depth=5, n_estimators=200; total time=  25.2s\n",
+      "[CV] END ..learning_rate=0.05, max_depth=5, n_estimators=200; total time=  23.3s\n",
+      "[CV] END ..learning_rate=0.05, max_depth=5, n_estimators=200; total time=  23.0s\n",
+      "                   Model           MSE        R2            MAE  \\\n",
+      "0       GradientBoosting  3.953179e+10  0.657830  115976.443411   \n",
+      "1           RandomForest  4.763865e+10  0.587661  120205.811967   \n",
+      "2                XGBoost  3.824763e+10  0.668945  112525.067799   \n",
+      "3  XGBoost (Grid Search)  3.893277e+10  0.663015  112348.109583   \n",
+      "\n",
+      "                                     Best Parameters  \n",
+      "0                                                NaN  \n",
+      "1                                                NaN  \n",
+      "2                                                NaN  \n",
+      "3  {'learning_rate': 0.1, 'max_depth': 3, 'n_esti...  \n"
+     ]
+    }
+   ],
    "source": [
-    "# Select numerical and categorical features\n",
+    "import pandas as pd\n",
+    "from scipy.stats import zscore\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.ensemble import GradientBoostingRegressor, RandomForestRegressor\n",
+    "from xgboost import XGBRegressor\n",
+    "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_error\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
+    "# Select numerical and categorical features\n",
     "numerical_features = [\n",
     "    'living_space_size_(m2)', 'lot_size_(m2)', 'build_year', \n",
     "    'estimated_neighbourhood_price_per_m2', 'toilet', 'rooms', 'bathroom'\n",
@@ -216,59 +377,80 @@
     "target = 'price'\n",
     "\n",
     "# Apply Z-score normalization to numerical features\n",
+    "df_cleaned[numerical_features] = df_cleaned[numerical_features].apply(zscore)\n",
     "\n",
-    "df_cleaned[numerical_features] = df_cleaned[numerical_features].apply(zscore)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Correlation Analysis and Feature selection\n",
-    "\n",
-    "- Calculation of correlation matrix and selection of features that are most correlated with the target variable, using a treshold of 0.15."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Calculate correlation matrix using only numerical features\n",
-    "\n",
     "correlation_matrix = df_cleaned[numerical_features + [target]].corr()\n",
     "correlated_features = correlation_matrix.index[abs(correlation_matrix[target]) > 0.15].tolist()\n",
     "\n",
     "# Include categorical features for encoding\n",
-    "\n",
     "selected_features = list(set(correlated_features + categorical_features + [target]))\n",
-    "df_selected = df_cleaned[selected_features]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Encoding Categorical Variables\n",
+    "df_selected = df_cleaned[selected_features]\n",
     "\n",
-    "- Using one-hot encoding to encode the categorical variables."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Encode categorical variables\n",
-    "\n",
     "df_encoded = pd.get_dummies(df_selected, columns=categorical_features, drop_first=True)\n",
     "\n",
     "# Separate features and target variable\n",
-    "\n",
     "X = df_encoded.drop(columns=[target])\n",
-    "y = df_encoded[target]"
+    "y = df_encoded[target]\n",
+    "\n",
+    "# Scale numerical features\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "# Apply PCA\n",
+    "pca = PCA(n_components=0.95)  # Retain 95% of variance\n",
+    "X_pca = pca.fit_transform(X_scaled)\n",
+    "\n",
+    "# Split the data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_pca, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Initialize models\n",
+    "models = {\n",
+    "    'GradientBoosting': GradientBoostingRegressor(random_state=42),\n",
+    "    'RandomForest': RandomForestRegressor(random_state=42),\n",
+    "    'XGBoost': XGBRegressor(random_state=42)\n",
+    "}\n",
+    "\n",
+    "# Train and evaluate each model\n",
+    "results = []\n",
+    "for name, model in models.items():\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    mse = mean_squared_error(y_test, y_pred)\n",
+    "    r2 = r2_score(y_test, y_pred)\n",
+    "    mae = mean_absolute_error(y_test, y_pred)\n",
+    "    results.append({'Model': name, 'MSE': mse, 'R2': r2, 'MAE': mae})\n",
+    "\n",
+    "# Perform Grid Search for the best model\n",
+    "best_model_name = max(results, key=lambda x: x['R2'])['Model']\n",
+    "best_model = models[best_model_name]\n",
+    "param_grid = param_grids[best_model_name]\n",
+    "\n",
+    "grid_search = GridSearchCV(estimator=best_model, param_grid=param_grid, cv=3, n_jobs=-1, verbose=2, scoring='r2')\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "# Get best parameters and evaluate on test set\n",
+    "best_params = grid_search.best_params_\n",
+    "best_estimator = grid_search.best_estimator_\n",
+    "y_pred = best_estimator.predict(X_test)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "\n",
+    "# Add grid search results to the list\n",
+    "results.append({\n",
+    "    'Model': f'{best_model_name} (Grid Search)',\n",
+    "    'MSE': mse,\n",
+    "    'R2': r2,\n",
+    "    'MAE': mae,\n",
+    "    'Best Parameters': best_params\n",
+    "})\n",
+    "\n",
+    "# Convert results to a DataFrame\n",
+    "results_df = pd.DataFrame(results)\n",
+    "\n",
+    "print(results_df)"
    ]
   },
   {
