--- a/notebooks/categorical+numerical/4th_approach.ipynb
+++ b/notebooks/categorical+numerical/4th_approach.ipynb
@@ -4,12 +4,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data loading and initial step"
+    "## 4th approach - Using PCA and z-score normalization\n",
+    "\n",
+    "#### Overview\n",
+    "\n",
+    "- This notebook demonstrates an approach to building a ML model using a cleaned dataset. The key steps include feature selection, scaling, Principal Component Analysis (PCA), model training, and hyperparameter tuning using Grid Search."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Steps, on the 1st block of code, are:\n",
+    "\n",
+    "**Feature selection**\n",
+    "\n",
+    "- Numerical Features: We select a set of numerical features that are likely to influence the target variable.\n",
+    "- Categorical Features: Categorical features are also selected, and will later be encoded.\n",
+    "\n",
+    "**Data Preprocessing**\n",
+    "\n",
+    "- We apply Z-score normalization to the numerical features to standardize their values.\n",
+    "- Correlation Matrix - We calculate the correlation matrix to identify the most relevant numerical features with a correlation threshold of 0.15.\n",
+    "- Categorical Encoding - We include categorical features for one-hot encoding and merge them with the selected numerical features.\n",
+    "- Feature Scaling - We apply standard scaling to the numerical features to ensure all features contribute equally.\n",
+    "\n",
+    "**Principal Component Analysis (PCA)**\n",
+    "\n",
+    "- PCA is applied to reduce the dimensionality of the dataset while retaining 95% of the variance.\n",
+    "\n",
+    "**Train-Test Split**\n",
+    "\n",
+    "- We split the data into training and testing sets.\n",
+    "\n",
+    "**Model Training and Evaluation**\n",
+    "\n",
+    "- We initialize and train three models: Gradient Boosting, Random Forest, and XGBoost.\n",
+    "- We evaluate the models using Mean Squared Error (MSE) and R².\n",
+    "\n",
+    "**Hyperparameter Tuning with Grid Search**\n",
+    "\n",
+    "- We perform Grid Search to find the best hyperparameters for the model with the highest R² score.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -63,6 +103,8 @@
     }
    ],
    "source": [
+    "# Import libraries\n",
+    "\n",
     "import pandas as pd\n",
     "from scipy.stats import zscore\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -80,6 +122,7 @@
     "df_cleaned = pd.read_csv(df_cleaned_path)\n",
     "\n",
     "# Select numerical and categorical features\n",
+    "\n",
     "numerical_features = [\n",
     "    'living_space_size_(m2)', 'lot_size_(m2)', 'build_year', \n",
     "    'estimated_neighbourhood_price_per_m2', 'toilet', 'rooms', 'bathroom'\n",
@@ -91,39 +134,49 @@
     "target = 'price'\n",
     "\n",
     "# Apply Z-score normalization to numerical features\n",
+    "\n",
     "df_cleaned[numerical_features] = df_cleaned[numerical_features].apply(zscore)\n",
     "\n",
     "# Calculate correlation matrix using only numerical features\n",
+    "\n",
     "correlation_matrix = df_cleaned[numerical_features + [target]].corr()\n",
     "correlated_features = correlation_matrix.index[abs(correlation_matrix[target]) > 0.15].tolist()\n",
     "\n",
     "# Include categorical features for encoding\n",
+    "\n",
     "selected_features = list(set(correlated_features + categorical_features + [target]))\n",
     "df_selected = df_cleaned[selected_features]\n",
     "\n",
     "# Encode categorical variables\n",
+    "\n",
     "df_encoded = pd.get_dummies(df_selected, columns=categorical_features, drop_first=True)\n",
     "\n",
     "# Separate features and target variable\n",
+    "\n",
     "X = df_encoded.drop(columns=[target])\n",
     "y = df_encoded[target]\n",
     "\n",
     "# Scale numerical features\n",
+    "\n",
     "scaler = StandardScaler()\n",
     "X_scaled = scaler.fit_transform(X)\n",
     "\n",
     "# Apply PCA\n",
+    "\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
     "pca = PCA(n_components=0.95)  # Retain 95% of variance\n",
+    "\n",
     "X_pca = pca.fit_transform(X_scaled)\n",
     "\n",
     "# Split the data\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_pca, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# Initialize models\n",
+    "\n",
     "from sklearn.ensemble import GradientBoostingRegressor, RandomForestRegressor\n",
     "from xgboost import XGBRegressor\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
@@ -135,6 +188,7 @@
     "}\n",
     "\n",
     "# Train and evaluate each model\n",
+    "\n",
     "results = {}\n",
     "for name, model in models.items():\n",
     "    model.fit(X_train, y_train)\n",
@@ -144,10 +198,12 @@
     "    results[name] = {'MSE': mse, 'R2': r2}\n",
     "\n",
     "# Display results\n",
+    "\n",
     "for name, metrics in results.items():\n",
     "    print(f\"{name}: MSE = {metrics['MSE']}, R2 = {metrics['R2']}\")\n",
     "\n",
     "# Perform Grid Search for the best model\n",
+    "\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "param_grids = {\n",
@@ -169,6 +225,7 @@
     "}\n",
     "\n",
     "# Find the best model\n",
+    "\n",
     "best_model_name = max(results, key=lambda name: results[name]['R2'])\n",
     "best_model = models[best_model_name]\n",
     "param_grid = param_grids[best_model_name]\n",
@@ -177,6 +234,7 @@
     "grid_search.fit(X_train, y_train)\n",
     "\n",
     "# Get best parameters and evaluate on test set\n",
+    "\n",
     "best_params = grid_search.best_params_\n",
     "best_estimator = grid_search.best_estimator_\n",
     "y_pred = best_estimator.predict(X_test)\n",
