--- a/notebooks/categorical+numerical/2nd_approach.ipynb
+++ b/notebooks/categorical+numerical/2nd_approach.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Main 1 - Feature = numerical + categorical (with feature engineering)"
+    "## Main 1 - Feature = numerical + categorical (with/without feature engineering)"
    ]
   },
   {
